(fix): NRC feedback  (#618)
* fix overlapping dynamic and static numbers on challenge chart

* fix overlapped labels on trend chart

* fix lack of sorting when select a country

* fix non exact xaxis labels on challenges chart

* fix highlighted country when sort spi

* fix ranking chart highligted 2

* remove overlap solution on trend chart

* add new legend to trend chart

* add trend legend to pdf

* remove comment code

* extract scroll table to a function

* calculate selectedCountryIndex dinamycally

* new solution to avoid overlapping on xAxis challenges chart

* scroll table when sort by any indicator

* Add guard to prevent crash

---------

--- a/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
+++ b/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
@@ -51,6 +51,7 @@ $chart-margin: 14px;
   justify-content: space-between;
   position: absolute;
   bottom: -25px;
+  padding: 0 35px;
 }
 
 .yAxisTicksContainer {
@@ -72,7 +73,11 @@ $chart-margin: 14px;
 }
 
 .tickValue {
+  background-color: $elephant;
+  border-radius: 2px;
+  padding: 2px 6px;
   width: auto;
+  z-index: $bring-to-front;
 }
 .xAxis {
   transform: translateX(-50%);
