--- a/src/components/charts/trend-chart/trend-chart-styles.module.scss
+++ b/src/components/charts/trend-chart/trend-chart-styles.module.scss
@@ -11,9 +11,6 @@
   font-size: $font-size-xxs;
   text-anchor: end;
   font-family: $font-family-1;
-
-  // Readjust text. TODO: Improve positioning
-  transform: translate(18px, 0);
 }
 
 .cursorText {
