--- a/src/containers/nrc-content/nrc-challenges/nrc-challenges-styles.module.scss
+++ b/src/containers/nrc-content/nrc-challenges/nrc-challenges-styles.module.scss
@@ -38,7 +38,7 @@
 
     .scatterPlotChartWrapper {
       width: 80%;
-      margin-left: 10px;
+      margin-left: 20px;
 
       .xAxisContainer{
         width: 100%;
@@ -76,7 +76,7 @@
         transform: rotate(-90deg);
         position: relative;
         bottom: 50%;
-        left: 15px;
+        left: 2px;
       }
 
     }
@@ -160,6 +160,7 @@
 
           .xAxisLabelContainer {
             padding-left: calc(50% - 165px);
+
           }
 
         .yAxisContainer {
